<?xml version="1.0"?>
<package>
<name>barrel_detector</name>
<version>1.0.0</version>
<description>The barrel_detector this package detect barrel with laser scanner data</description>

  <author>Sara Tohidi</author>
  <maintainer email="tohidi.sara.d@gmail.com">delnia</maintainer>


  <license>BSD</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- runtime dependencies -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  </package>

